# hkcc

./: .gitignore  GIT-SETUP.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
benchmarks/: multimodal_benchmark.py  synthetic_benchmark.py
docs/: index.html
examples/: quickstart.py  rag_validation.py
paper/: experiments.py  hkcc.tex
paper/figs/: numbers.txt
src/hkcc/: __init__.py  compress.py  core.py  helpers.py  io_adapters.py  multimodal.py
tests/: test_hkcc.py  test_multimodal.py
